Fixing bug 261998. Don't fire the beforeunload event when loading a link to an anchor in the current document. r+sr=bzbarsky@mit.edu